# JNC

./: .gitignore  .travis.yml  CHANGES.md  ConfM_Migration_Guide.txt  LICENSE  README  README.md  README.rst  TODO  bugs.txt  build.gradle  gradle.properties  jnc.py  jpyang.py  settings.gradle  setup.cfg  setup.py  statements.txt
doc/: .gitignore  Makefile  UserManual.tex
examples/: build.gradle  settings.gradle
examples/0-intro/: Hosts.xml  Makefile  README  build.gradle  build.xml  hosts.xml  hosts.yang
examples/1-interfaces/: Makefile  README  build.gradle  build.xml  iana-if-type.yang  ietf-interfaces.yang  ietf-ip.xml  ietf-ip.yang
examples/1-simple/: Makefile  build.xml  simple.xml
examples/2-junos/: Makefile  README  build.xml  get-schema.sh  get-schema.xml  junos-system.xml  junos-xsd2yang  junos-xsd2yang.xsl  junos.xml  netconf-console  tailf-cli-extensions.yang  tailf-common.yang
examples/confd/: aaa_init.xml  confd.conf
examples/yang/: dhcpd.yang  identity-ref.yang  my-crypto.yang  recursive.yang  simple_v1.yang  simple_v3.yang
jnc/: README  build.xml  pom.xml
jnc-gradle-plugin/: build.gradle  gradle.properties  settings.gradle
jnc/doc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  overview-tree.html  package-list  serialized-form.html
pyang/: __init__.py  error.py  grammar.py  plugin.py  statements.py  types.py
pyang_jnc/: __init__.py  jnc.py
test/: .gitignore
tests/: build.gradle  jnc_test.py  settings.gradle  test_full_jnc.py
yangtest/: .gitignore
(+1651 files in other folders)
