[metadata]
name = pyang-jnc
summary = Pyang plugin generating classes for Java NETCONF Client
author = Tail-f, a Cisco company
author-email = nyat_support@cisco.com
url = https://github.com/tail-f-systems/JNC/
description-file = README.rst
license = Apache-2.0
keywords = NETCONF CLI client
classifier = 
           Development Status :: 4 - Beta

           Intended Audience :: Developers
           Intended Audience :: System Administrators
           Intended Audience :: Telecommunications Industry
           Topic :: System :: Networking
           Topic :: System :: Networking :: Monitoring

           License :: OSI Approved :: Apache Software License

           Programming Language :: Python :: 3
           Programming Language :: Java

[files]
packages = pyang_jnc

[entry_points]
pyang.plugin =
    jnc = pyang_jnc:pyang_plugin_init
